ffi/poc/cpp/corpus/nounk/include/ak_abi.h


#define AK_OK                    0      
#define AK_ALREADY_INITIALIZED   1      
#define AK_ERR_HOST              (-1)   
#define AK_ERR_MALFORMED         (-2)   
#define AK_ERR_TRUNCATED         (-3)   
#define AK_ERR_DEPTH             (-4)   
#define AK_ERR_LIMIT             (-5)   
#define AK_ERR_TRANSCODE         (-6)   
#define AK_ERR_CAPACITY          (-7)   
#define AK_ERR_INVALID_STATE     (-8)   
#define AK_ERR_PANIC             (-9)   
#define AK_ERR_UNINITIALIZED     (-10)  
#define AK_ERR_ABI               (-11)  
#define AK_ABI_VERSION 1u
#define AK_INIT_OWN_LOGGING    1u
#define AK_INIT_NO_PANIC_HOOK  2u
#define AK_INIT_NO_CRYPTO      4u
typedef struct ak_dec_ctx ak_dec_ctx;
typedef int32_t (*ak_loop_f)(ak_enc_ctx *ctx, const void *obj, int64_t token);
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
#define AK_STR_DIRECT ((const void *)(uintptr_t)1)  
#define AK_TOKEN_ROOT ((int64_t)-1)  
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  uint32_t presence;
};
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_dfix_Duration {
  int64_t seconds;
  int32_t nanos;
  uint32_t presence;
};
struct ak_dfix_ResultRaw {
  struct ak_span session_id;
  struct ak_span name;
  struct ak_span owner_task_id;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp completed_at;
  struct ak_span result_id;
  int64_t size;
  struct ak_span created_by;
  struct ak_span opaque_id;
  uint8_t manual_deletion;
  uint32_t presence;
};
struct ak_dfix_TaskOptions {
  struct ak_dfix_Duration max_duration;
  int32_t max_retries;
  int32_t priority;
  struct ak_span partition_id;
  struct ak_span application_name;
  struct ak_span application_version;
  struct ak_span application_namespace;
  struct ak_span application_service;
  struct ak_span engine_type;
  uint32_t presence;
};
struct ak_dfix_TaskOutput {
  uint8_t success;
  struct ak_span error;
  uint32_t presence;
};
struct ak_dfix_TaskDetailed {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_span owner_pod_id;
  int32_t status;
  struct ak_span status_message;
  struct ak_dfix_TaskOptions options;
  struct ak_dfix_Timestamp created_at;
  struct ak_dfix_Timestamp submitted_at;
  struct ak_dfix_Timestamp started_at;
  struct ak_dfix_Timestamp ended_at;
  struct ak_dfix_Timestamp pod_ttl;
  struct ak_dfix_TaskOutput output;
  struct ak_span pod_hostname;
  struct ak_dfix_Timestamp received_at;
  struct ak_dfix_Timestamp acquired_at;
  struct ak_dfix_Duration creation_to_end_duration;
  struct ak_dfix_Duration processing_to_end_duration;
  struct ak_span initial_task_id;
  struct ak_dfix_Duration received_to_end_duration;
  struct ak_dfix_Timestamp processed_at;
  struct ak_dfix_Timestamp fetched_at;
  struct ak_span payload_id;
  struct ak_span created_by;
  uint32_t presence;
};
struct ak_dfix_TaskSummary {
  struct ak_span id;
  struct ak_span session_id;
  struct ak_dfix_TaskOptions options;
  int32_t status;
  struct ak_dfix_Timestamp created_at;
  struct ak_span error;
  struct ak_span status_message;
  int64_t count_data_dependencies;
  uint32_t presence;
};
struct ak_dfix_Empty {
  uint32_t presence;
};
struct ak_dfix_Probe {
  struct ak_span id;
  int32_t opt_count;
  struct ak_span opt_label;
  uint8_t opt_flag;
  uint32_t body_case;
  int64_t body_as_int;
  struct ak_span body_as_text;
  struct ak_span body_as_blob;
  struct ak_dfix_Timestamp body_as_stamp;
  struct ak_dfix_Empty body_as_nothing;
  uint32_t presence;
};
struct ak_dfix_UploadResultData {
  struct ak_span session_id;
  struct ak_span result_id;
  struct ak_span data_chunk;
  uint32_t presence;
};
struct ak_dfix_MetricsBatch {
  struct ak_span id;
  uint32_t presence;
};
struct ak_dfix_Pair {
  struct ak_span key;
  int32_t value;
  uint32_t presence;
};
struct ak_dfix_ListResultsResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
struct ak_dfix_ListTasksDetailedResponse {
  int32_t page;
  int32_t total;
  uint32_t presence;
};
struct ak_dfix_ListTaskSummaryResponse {
  uint32_t presence;
};
struct ak_dfix_ListProbeResponse {
  uint32_t presence;
};
struct ak_dfix_ListMetricsResponse {
  uint32_t presence;
};
struct ak_dfix_UploadResultDataMessage {
  struct ak_dfix_UploadResultData upload;
  uint32_t presence;
};
struct ak_efix_DualResponse {
  uint32_t presence;
};
struct ak_dfix_DualResponse {
  uint32_t presence;
};
struct ak_evt_ResultRaw {
  const void *_reserved;  
};
struct ak_dvt_ResultRaw {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ResultRaw *);
};
struct ak_evt_TaskDetailed {
  ak_loop_f loop_parent_task_ids;
  ak_loop_f loop_data_dependencies;
  ak_loop_f loop_expected_output_ids;
  ak_loop_f loop_retry_of_ids;
  ak_loop_f loop_options_options;
};
struct ak_dvt_TaskDetailed {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskDetailed *);
  void (*add_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_TaskSummary {
  ak_loop_f loop_options_options;
};
struct ak_dvt_TaskSummary {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskSummary *);
  void (*add_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_Probe {
  const void *_reserved;  
};
struct ak_dvt_Probe {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Probe *);
};
struct ak_evt_MetricsBatch {
  ak_loop_f loop_ticks;
  ak_loop_f loop_values;
  ak_loop_f loop_codes;
  ak_loop_f loop_flags;
  ak_loop_f loop_statuses;
};
struct ak_dvt_MetricsBatch {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_MetricsBatch *);
  void (*add_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
struct ak_evt_Pair {
  const void *_reserved;  
};
struct ak_dvt_Pair {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_Pair *);
};
struct ak_evt_ListResultsResponse {
  ak_loop_f loop_results;
};
struct ak_dvt_ListResultsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListResultsResponse *);
  void (*add_results)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_ResultRaw *, int32_t);
};
struct ak_evt_ListTasksDetailedResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskDetailed *elem_tasks;
};
struct ak_dvt_ListTasksDetailedResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTasksDetailedResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskDetailed *);
  void (*add_tasks_parent_task_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_data_dependencies)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_expected_output_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_retry_of_ids)(ak_dec_ctx *, void *, int64_t, const struct ak_span *, int32_t);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_ListTaskSummaryResponse {
  ak_loop_f loop_tasks;
  const struct ak_evt_TaskSummary *elem_tasks;
};
struct ak_dvt_ListTaskSummaryResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListTaskSummaryResponse *);
  int64_t (*new_tasks)(ak_dec_ctx *, void *);
  void (*apply_tasks)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskSummary *);
  void (*add_tasks_options_options)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_TaskOptionsOptionsEntry *, int32_t);
};
struct ak_evt_ListProbeResponse {
  ak_loop_f loop_probes;
};
struct ak_dvt_ListProbeResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListProbeResponse *);
  void (*add_probes)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Probe *, int32_t);
};
struct ak_evt_ListMetricsResponse {
  ak_loop_f loop_batches;
  const struct ak_evt_MetricsBatch *elem_batches;
};
struct ak_dvt_ListMetricsResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ListMetricsResponse *);
  int64_t (*new_batches)(ak_dec_ctx *, void *);
  void (*apply_batches)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_MetricsBatch *);
  void (*add_batches_ticks)(ak_dec_ctx *, void *, int64_t, const int64_t *, int32_t);
  void (*add_batches_values)(ak_dec_ctx *, void *, int64_t, const double *, int32_t);
  void (*add_batches_codes)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
  void (*add_batches_flags)(ak_dec_ctx *, void *, int64_t, const uint8_t *, int32_t);
  void (*add_batches_statuses)(ak_dec_ctx *, void *, int64_t, const int32_t *, int32_t);
};
struct ak_evt_UploadResultDataMessage {
  const void *_reserved;  
};
struct ak_dvt_UploadResultDataMessage {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_UploadResultDataMessage *);
};
struct ak_evt_DualResponse {
  ak_loop_f loop_left;
  ak_loop_f loop_right;
};
struct ak_dvt_DualResponse {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_DualResponse *);
  void (*add_left)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
  void (*add_right)(ak_dec_ctx *, void *, int64_t, const struct ak_dfix_Pair *, int32_t);
};
struct ak_evt_TaskOptionsOptionsEntry {
  const void *_reserved;  
};
struct ak_dvt_TaskOptionsOptionsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptionsOptionsEntry *);
};
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);