ffi/poc/csharp/src/Harness/GeneratedNounk/Abi.cs


[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_UploadResultDataMessage
{
    public ak_dfix_UploadResultData upload;
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_efix_DualResponse
{
    public uint presence;
}

[StructLayout(LayoutKind.Sequential)]
public struct ak_dfix_DualResponse
{
    public uint presence;
}

/// The presence bits (plan.presence_bits), one per singular message child and per
/// explicit field, in tag order; the same bit in the e, d and u group.
public static class AkPresent
{
    public const uint ResultRaw_created_at = 1u << 0;
    public const uint ResultRaw_completed_at = 1u << 1;
    public const uint TaskOptions_max_duration = 1u << 0;
    public const uint TaskDetailed_options = 1u << 0;
    public const uint TaskDetailed_created_at = 1u << 1;
    public const uint TaskDetailed_submitted_at = 1u << 2;
    public const uint TaskDetailed_started_at = 1u << 3;
    public const uint TaskDetailed_ended_at = 1u << 4;
    public const uint TaskDetailed_pod_ttl = 1u << 5;
    public const uint TaskDetailed_output = 1u << 6;
    public const uint TaskDetailed_received_at = 1u << 7;
    public const uint TaskDetailed_acquired_at = 1u << 8;
    public const uint TaskDetailed_creation_to_end_duration = 1u << 9;
    public const uint TaskDetailed_processing_to_end_duration = 1u << 10;
    public const uint TaskDetailed_received_to_end_duration = 1u << 11;
    public const uint TaskDetailed_processed_at = 1u << 12;
    public const uint TaskDetailed_fetched_at = 1u << 13;
    public const uint TaskSummary_options = 1u << 0;
    public const uint TaskSummary_created_at = 1u << 1;
    public const uint Probe_opt_count = 1u << 0;
    public const uint Probe_opt_label = 1u << 1;
    public const uint Probe_opt_flag = 1u << 2;
    public const uint UploadResultDataMessage_upload = 1u << 0;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListResultsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_results;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListResultsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListResultsResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_ResultRaw*, int, void> add_results;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListTasksDetailedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_tasks;
    public ak_evt_TaskDetailed* elem_tasks;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListTasksDetailedResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListTasksDetailedResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskDetailed*, void> apply_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_tasks_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_tasks_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListProbeResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_probes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListProbeResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListProbeResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Probe*, int, void> add_probes;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListTaskSummaryResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_tasks;
    public ak_evt_TaskSummary* elem_tasks;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListTaskSummaryResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListTaskSummaryResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskSummary*, void> apply_tasks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_tasks_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_UploadResultDataMessage
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_UploadResultDataMessage
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_UploadResultDataMessage*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ListMetricsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_batches;
    public ak_evt_MetricsBatch* elem_batches;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ListMetricsResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ListMetricsResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long> new_batches;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_MetricsBatch*, void> apply_batches;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_batches_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, double*, int, void> add_batches_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_batches_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, byte*, int, void> add_batches_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_batches_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_DualResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_left;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_right;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_DualResponse
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_DualResponse*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Pair*, int, void> add_left;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_Pair*, int, void> add_right;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskOptionsOptionsEntry
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskOptionsOptionsEntry
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskOptionsOptionsEntry*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_ResultRaw
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_ResultRaw
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_ResultRaw*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskDetailed
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskDetailed
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskDetailed*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_parent_task_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_data_dependencies;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_expected_output_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_span*, int, void> add_retry_of_ids;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_TaskSummary
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_TaskSummary
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_TaskSummary*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, ak_dfix_TaskOptionsOptionsEntry*, int, void> add_options_options;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Probe
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Probe
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Probe*, void> apply;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_MetricsBatch
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int> loop_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_MetricsBatch
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_MetricsBatch*, void> apply;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, long*, int, void> add_ticks;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, double*, int, void> add_values;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_codes;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, byte*, int, void> add_flags;
    public delegate* unmanaged[Cdecl]<IntPtr, void*, long, int*, int, void> add_statuses;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_evt_Pair
{
    public IntPtr _reserved;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe struct ak_dvt_Pair
{
    public delegate* unmanaged[Cdecl]<IntPtr, void*, ak_dfix_Pair*, void> apply;
}

/// ABI v1 section 6: plain exports, declared per symbol, so a missing one is a load
/// failure. Every declaration carries both language levels.
public static unsafe partial class Abi
{
    public const string Lib = "ak_core";

    /// R-G7: every entry point below requires `ak_init`. The static constructor runs
    /// before the first call to ANY of them, so no path reaches the core uninitialised.
    static Abi() { AbiInit.Run(); }

    public const uint AK_ABI_VERSION = 1u;
    public const int AK_OK = 0;
    public const int AK_ALREADY_INITIALIZED = 1;
    public const int AK_ERR_HOST = -1;
    public const int AK_ERR_MALFORMED = -2;
    public const int AK_ERR_TRUNCATED = -3;
    public const int AK_ERR_DEPTH = -4;
    public const int AK_ERR_LIMIT = -5;
    public const int AK_ERR_TRANSCODE = -6;
    public const int AK_ERR_CAPACITY = -7;
    public const int AK_ERR_INVALID_STATE = -8;
    public const int AK_ERR_PANIC = -9;
    public const int AK_ERR_UNINITIALIZED = -10;
    public const int AK_ERR_ABI = -11;
    public const uint AK_INIT_OWN_LOGGING = 1u;
    public const uint AK_INIT_NO_PANIC_HOOK = 2u;
    public const uint AK_INIT_NO_CRYPTO = 4u;
    public const long AK_TOKEN_ROOT = -1;
    /// ABI v1 section 8's direct-argument sentinel (`AK_STR_DIRECT`).
    public static readonly IntPtr AK_STR_DIRECT = (IntPtr)1;
